Fix overflow

--- a/FormPortal/Pages/Admin/Forms/FormEditor.razor.css
+++ b/FormPortal/Pages/Admin/Forms/FormEditor.razor.css
@@ -251,6 +251,7 @@
     border-right: 1px solid rgba(0, 0, 0, 0.2);
     position: absolute;
     inset: 0;
+    overflow: auto;
 }
 
 ::deep .formular-element {
